fix overflow

--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   color: white;
   background-color: #252525;
+  overflow: hidden;
 }
 
 div.header {
